# ai-consulting-test

./: .babelrc  .env.example  .eslintrc  .gitignore  Makefile  README.md  addJsExtension.js  index.ts  math_branch.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.txt  test_llm.py  tsconfig.json
src/: __init__.py  generateEmbedding.ts  pineconeClient.ts  processMessage.ts  queryEmbedding.ts  upsertEmbeddings.ts
src/api/: __init__.py
src/clients/: __init__.py  assistant_client.py  openai.ts  openai_chat.py  openai_embeddings.py  pinecone_client.py
src/llm/: __init__.py  instructions.py  process_queries.py  prompt_handler.py
src/scripts/: __init__.py  processNewFiles.ts  process_files.py  test_llm.py
src/utils/: __init__.py  config.py  create_assistant.py  document_processor.py  download_model_files.py  embeddings.py  generateEmbedding.ts  message_processor.py  processMessage.ts  prompt_ai.py  queryEmbedding.ts  records.py  shared.py  upsertEmbeddings.ts  vector_search.py
